[gd_scene load_steps=28 format=3 uid="uid://chk8pahnhecrr"]

[ext_resource type="Texture2D" uid="uid://c5ptvp2moernu" path="res://assets/characters/Enemy1/attack.png" id="1_fhb1y"]
[ext_resource type="Script" path="res://code/enemy_1.gd" id="1_tu0p4"]
[ext_resource type="Texture2D" uid="uid://cc7vnp83db7mj" path="res://assets/characters/Enemy1/die.png" id="2_752sl"]
[ext_resource type="Texture2D" uid="uid://bwok3ube6jvvw" path="res://assets/characters/Enemy1/move.png" id="3_kr64o"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x74pg"]
atlas = ExtResource("1_fhb1y")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_li3jj"]
atlas = ExtResource("1_fhb1y")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cadek"]
atlas = ExtResource("1_fhb1y")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymg80"]
atlas = ExtResource("1_fhb1y")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyxue"]
atlas = ExtResource("2_752sl")
region = Rect2(0, 0, 81, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eu23y"]
atlas = ExtResource("2_752sl")
region = Rect2(81, 0, 81, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vggwd"]
atlas = ExtResource("2_752sl")
region = Rect2(162, 0, 81, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oykxv"]
atlas = ExtResource("3_kr64o")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jme1f"]
atlas = ExtResource("3_kr64o")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gkla"]
atlas = ExtResource("3_kr64o")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqo73"]
atlas = ExtResource("3_kr64o")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqlbr"]
atlas = ExtResource("3_kr64o")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_utm0c"]
atlas = ExtResource("3_kr64o")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnxek"]
atlas = ExtResource("3_kr64o")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5btsy"]
atlas = ExtResource("3_kr64o")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iker8"]
atlas = ExtResource("3_kr64o")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxcbx"]
atlas = ExtResource("3_kr64o")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_05b5x"]
atlas = ExtResource("3_kr64o")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddynm"]
atlas = ExtResource("3_kr64o")
region = Rect2(128, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_rpqku"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x74pg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_li3jj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cadek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymg80")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyxue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eu23y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vggwd")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oykxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jme1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gkla")
}],
"loop": true,
"name": &"go_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqo73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqlbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utm0c")
}],
"loop": true,
"name": &"go_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnxek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5btsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iker8")
}],
"loop": true,
"name": &"go_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxcbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05b5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddynm")
}],
"loop": true,
"name": &"go_up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0lo8w"]
radius = 16.0
height = 58.0

[sub_resource type="CircleShape2D" id="CircleShape2D_14xte"]
radius = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xtc01"]
radius = 189.042

[node name="Enemy1" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 2
collision_mask = 2
script = ExtResource("1_tu0p4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rpqku")
animation = &"go_left"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, 1)
shape = SubResource("CapsuleShape2D_0lo8w")

[node name="hitbox_enemy1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox_enemy1"]
position = Vector2(-11, 1)
shape = SubResource("CircleShape2D_14xte")

[node name="territory" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="territory"]
shape = SubResource("CircleShape2D_xtc01")

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = -16.0
offset_top = -41.0
offset_right = 5.0
offset_bottom = -33.0
max_value = 30.0
fill_mode = 1
show_percentage = false

[connection signal="body_entered" from="hitbox_enemy1" to="." method="_on_hitbox_enemy_1_body_entered"]
[connection signal="body_exited" from="hitbox_enemy1" to="." method="_on_hitbox_enemy_1_body_exited"]
[connection signal="body_entered" from="territory" to="." method="_on_territoty_body_entered"]
[connection signal="body_exited" from="territory" to="." method="_on_territoty_body_exited"]
